--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="outer-div">
       <div class="container">
         <img
-          src="https://raw.githubusercontent.com/karthikeyaveruturi/tempstoragecdn/refs/heads/main/dqqqq.jpg"
+          src="https://raw.githubusercontent.com/vjdataquesters/cdnstorage/refs/heads/main/dqqqq.jpg"
           alt=""
           class="top-img"
         />
@@ -97,7 +97,7 @@
           <p class="p-text">A hands-on journey with Python</p>
         </div>
         <img
-          src="https://raw.githubusercontent.com/karthikeyaveruturi/tempstoragecdn/refs/heads/main/Get%20Set%20Py%20-%20Main%20poster.png"
+          src="https://raw.githubusercontent.com/vjdataquesters/cdnstorage/refs/heads/main/gsp.jpg"
           alt="Python Bootcamp"
           class="image"
         />
@@ -147,27 +147,31 @@
             <li>
               🏢 <strong>Venue</strong>:
               <h3 style="color: rgb(13, 13, 144)">
-                APJ Abdul Kalam Auditorium
+                APJ Abdul Kalam Auditorium, VNRVJIET
               </h3>
+            </li>
+            <li style="margin: 5px 0">
+              ⏰ <strong>Timings</strong>: 10:00AM to 4:40PM
             </li>
             <li>
               🎤 <strong>Speaker</strong>: Sreeranjan Kumar Deverapalli, Senior
               Software Developer, NSIC
             </li>
             <li style="margin-top: 5px">
-              💸 <strong>Fee</strong>: ₹75 per person
+              💸 <strong>Registration Fee</strong>: ₹75 per person
             </li>
           </ul>
+
+          <p>For more details, contact:</p>
+          <p>📞 Bindu Sree Reddy : <strong>8309192576</strong></p>
+          <p>📞 Akhileshwar : <strong>7993066097</strong></p>
+
           <a
             href="https://forms.gle/gSjQG1dBVGs7FYXE8"
             target="_blank"
             class="reg-button"
             >Click here to register
           </a>
-          <p></p>
-          <img
-            src="https://raw.githubusercontent.com/karthikeyaveruturi/tempstoragecdn/refs/heads/main/cat-crazy-cat.gif"
-          />
         </div>
       </div>
     </div>
